bat.bool1.sumdouble.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {if (a==b) {return (a+a+a+a); return(a+b)} 
}